fix: set correct gap for navigation buttons

--- a/src/styles/overrides.scss
+++ b/src/styles/overrides.scss
@@ -57,6 +57,10 @@
 }
 
 .pc-desktop-navigation {
+    &__buttons {
+        gap: 20px;
+    }
+
     &__buttons &__item {
         display: contents;
     }
